--- a/SuperK_Select_Data/JHK_Plate/JHK_SuperK_Analysis.ipynb
+++ b/SuperK_Select_Data/JHK_Plate/JHK_SuperK_Analysis.ipynb
@@ -22,6 +22,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.insert(0, '../../old')\n",
+    "from DRRP_Functions import ultimate_polarimetry"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +74,8 @@
     "# TODO: make sure image taking functions (specifically darks) aren't taking the same images multiple times in a cube\n",
     "# TODO: make a function to automatically find the center of the beam and the radius. Use this to crop the image around the beam and only use those pixels\n",
     "# TODO: IT LOOKS LIKE THE IMAGES AREN'T CHANGING IN THE CUBE FOR DARKS!! Retake dark data? Raw data just has one image for some reason\n",
-    "# TODO: test if closing hdul makes dark subtraction faster"
+    "# TODO: test if closing hdul makes dark subtraction faster\n",
+    "# TODO: make reduce function that not only subtracts darks but also crops the image around the circles"
    ]
   },
   {
@@ -91,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,42 +455,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reduced_filename = 'Reduced_DRRP_'\n",
-    "reduced_filename = 'DRRP_'\n",
-    "reduced_folder = \"D:\\\\desktop_drrp_data\\\\test_12_17_2024\\\\calibration\\\\calibration_raw\\\\Cal_1400_Raw\"\n",
+    "reduced_filename = ''\n",
+    "reduced_folder = \"D:\\\\desktop_drrp_data\\\\test_12_17_2024\\\\calibration\\\\calibration_raw\\\\Cal_1400_Reduced\"\n",
     "lcenter = [200, 194]\n",
     "rcenter = [200, 391]\n",
     "maxradius = 65\n",
-    "cutoff = 10000000\n",
+    "# cutoff = 100000\n",
     "\n",
-    "extracted_data = extract_intensities(reduced_filename, reduced_folder, lcenter, rcenter, maxradius, cutoff)\n",
-    "Cal_Il_1400 = extracted_data[0]\n",
-    "Cal_Ir_1400 = extracted_data[1]\n",
-    "Cal_theta1400 = extracted_data[2]"
+    "extracted_data = extract_intensities(reduced_filename, reduced_folder, lcenter, rcenter, maxradius)\n",
+    "Cal_Il_1300 = extracted_data[0]\n",
+    "Cal_Ir_1300 = extracted_data[1]\n",
+    "Cal_theta1300 = extracted_data[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 7754022.   8627872.  24838492.  29274311.  17163783.   2866031.\n",
-      "  2162686.   8603764.  10669063.5 12693247.  25721732.  46651370.\n",
-      " 57914908.  50230602.  31578882.  15669874.   4683261.    603802.\n",
-      " 10508571.  32904224.  47037706.  39099467.  16019697.   4803596.\n",
-      " 15499917.5 28945411.  26038504.   9170305.    763562.   5674189.\n",
-      " 10846550.  11183696.  17351642.  36098698.  55329966.  56867036.\n",
-      " 41252654.5 23216429.   9533785.5  1364930.   3439137.  20215361.\n",
-      " 41905459.  46155560.  28712818.   7921039. ]\n",
+      "[ 5107672.  3469014. 23457266. 38545607. 30120746. 10352465.   572618.\n",
+      "  4750602. 12469129. 19936648. 31980844. 47039335. 53077076. 44572352.\n",
+      " 29615132. 17911785.  8494573.  1146519.  4016949. 21801323. 39568767.\n",
+      " 36483136. 14668381.   750306. 11684113. 32125844. 35964674. 19619846.\n",
+      "  3322196.  1474779.  8592542. 15741303. 24700901. 39068818. 51091998.\n",
+      " 49614851. 36788959. 23151166. 12985554.  4178451.   684476. 11565894.\n",
+      " 32372778. 41647434. 26670391.  5027262.]\n",
       "46\n",
+      "[ 5107672.  3469014. 23457266. 38545607. 30120746. 10352465.   572618.\n",
+      "  4750602. 12469129. 19936648. 31980844. 47039335. 53077076. 44572352.\n",
+      " 29615132. 17911785.  8494573.  1146519.  4016949. 21801323. 39568767.\n",
+      " 36483136. 14668381.   750306. 11684113. 32125844. 35964674. 19619846.\n",
+      "  3322196.  1474779.  8592542. 15741303. 24700901. 39068818. 51091998.\n",
+      " 49614851. 36788959. 23151166. 12985554.  4178451.   684476. 11565894.\n",
+      " 32372778. 41647434. 26670391.  5027262.]\n",
       "[0.         0.06981317 0.13962634 0.20943951 0.27925268 0.34906585\n",
       " 0.41887902 0.48869219 0.55850536 0.62831853 0.6981317  0.76794487\n",
       " 0.83775804 0.90757121 0.97738438 1.04719755 1.11701072 1.18682389\n",
@@ -492,9 +508,10 @@
     }
    ],
    "source": [
-    "print(Cal_Il_1400)\n",
-    "print(len(Cal_Il_1400))\n",
-    "print(Cal_theta1400)"
+    "print(Cal_Il_1300)\n",
+    "print(len(Cal_Il_1300))\n",
+    "print(Cal_Il_1300)\n",
+    "print(Cal_theta1300)"
    ]
   },
   {
@@ -513,55 +530,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reduced_filename = 'DRRP_'\n",
-    "reduced_folder = \"D:\\\\desktop_drrp_data\\\\test_12_17_2024\\\\JHK_waveplate_measurement\\\\middle_position\\\\Cal_1400_Raw\"\n",
+    "reduced_filename = ''\n",
+    "reduced_folder = \"D:\\\\desktop_drrp_data\\\\test_12_17_2024\\\\JHK_waveplate_measurement\\\\middle_position\\\\Cal_1400_Reduced\"\n",
     "lcenter = [200, 194]\n",
     "rcenter = [200, 391]\n",
-    "maxradius = 16\n",
-    "cutoff = 90000\n",
+    "maxradius = 65\n",
+    "# cutoff = 1000000\n",
     "\n",
-    "extracted_data = extract_intensities(reduced_filename, reduced_folder, lcenter, rcenter, maxradius, cutoff)\n",
-    "Il_1400 = extracted_data[0]\n",
-    "Ir_1400 = extracted_data[1]\n",
-    "theta1400 = extracted_data[2]"
+    "extracted_data = extract_intensities(reduced_filename, reduced_folder, lcenter, rcenter, maxradius)\n",
+    "Il_1300 = extracted_data[0]\n",
+    "Ir_1300 = extracted_data[1]\n",
+    "theta1300 = extracted_data[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.76765311  0.01587117 -0.09661647 -0.01138913]\n",
-      " [ 0.16697467  0.02960207 -0.86084521 -0.03613853]\n",
-      " [ 0.11590008 -1.          0.07945279 -0.02407883]\n",
-      " [ 0.00537916  0.01045846  0.00350263 -0.80047537]] This is the Mueller matrix of the sample waveplate\n",
-      "0.45372425195418087 This is the retardance of the sample\n",
-      "[[ 0.89676117 -0.02458228  0.01767613 -0.00429988]\n",
-      " [-0.06243618  0.92074268  0.07405616 -0.00324003]\n",
-      " [ 0.01441358 -0.03792483  1.         -0.00182594]\n",
-      " [-0.00239727 -0.00221436 -0.01226491  0.89208936]] This is the Mueller matrix for calibration (close to identity)\n",
-      "0.05045013314263834 This is the RMS error in the calibration matrix\n",
-      "0.17598093023337347 This is the retardance error in the sample waveplate\n",
-      "[-0.09450613 -0.25587674 -0.17918555 -0.02936681 -0.04962123] Fit parameters for a1, w1, w2, r1, and r2. 1 for generator, 2 for analyzer\n"
+      "[[ 0.88802427 -0.00751507  0.01737222 -0.00994547]\n",
+      " [-0.01284118  0.12063507 -0.92864794 -0.03233129]\n",
+      " [ 0.07433625 -1.         -0.18206358 -0.03138789]\n",
+      " [ 0.00905553  0.01658159  0.02363162 -0.88774169]] This is the Mueller matrix of the sample waveplate\n",
+      "nan This is the retardance of the sample\n",
+      "[[ 0.88565106 -0.02407373  0.01760894 -0.00423866]\n",
+      " [-0.06140902  0.91283922  0.0750931  -0.00318299]\n",
+      " [ 0.01534488 -0.03930914  1.         -0.00186724]\n",
+      " [-0.00235806 -0.00215069 -0.01218918  0.88199909]] This is the Mueller matrix for calibration (close to identity)\n",
+      "0.054122302197966383 This is the RMS error in the calibration matrix\n",
+      "nan This is the retardance error in the sample waveplate\n",
+      "[-0.09287146 -0.25452169 -0.17882411 -0.03536707 -0.05548071] Fit parameters for a1, w1, w2, r1, and r2. 1 for generator, 2 for analyzer\n"
      ]
     }
    ],
    "source": [
-    "data1400 = q_ultimate_polarimetry(Cal_theta1400, Cal_Il_1400, Cal_Ir_1400, theta1400, Il_1400, Ir_1400)\n",
-    "print(data1400[0], \"This is the Mueller matrix of the sample waveplate\")\n",
-    "print(data1400[1], \"This is the retardance of the sample\")\n",
-    "print(data1400[2], \"This is the Mueller matrix for calibration (close to identity)\")\n",
-    "print(data1400[3], \"This is the RMS error in the calibration matrix\")\n",
-    "print(data1400[4], \"This is the retardance error in the sample waveplate\")\n",
-    "print(data1400[5], \"Fit parameters for a1, w1, w2, r1, and r2. 1 for generator, 2 for analyzer\")"
+    "data1300 = q_ultimate_polarimetry(Cal_theta1300, Cal_Il_1300, Cal_Ir_1300, theta1300, Il_1300, Ir_1300)\n",
+    "print(data1300[0], \"This is the Mueller matrix of the sample waveplate\")\n",
+    "print(data1300[1], \"This is the retardance of the sample\")\n",
+    "print(data1300[2], \"This is the Mueller matrix for calibration (close to identity)\")\n",
+    "print(data1300[3], \"This is the RMS error in the calibration matrix\")\n",
+    "print(data1300[4], \"This is the retardance error in the sample waveplate\")\n",
+    "print(data1300[5], \"Fit parameters for a1, w1, w2, r1, and r2. 1 for generator, 2 for analyzer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.0109995   0.16030039 -0.14300813 -0.03494684  0.03706783 -0.0379039 ] Left parameters for a1, a2, w1, w2, r1, and r2. 1 for generator, 2 for analyzer\n",
+      "[ 0.00668758  0.17267954 -0.15126078 -0.02602372  0.0570909   0.05135262] Right parameters for a1, a2, w1, w2, r1, and r2. 1 for generator, 2 for analyzer\n",
+      "[[ 1.         -0.02473857  0.04781935 -0.01058918]\n",
+      " [ 0.0116951   0.96243814  0.0598962  -0.01157586]\n",
+      " [ 0.02657125 -0.0425559   0.98169011 -0.01065602]\n",
+      " [-0.00340067  0.00331506  0.00253868  0.98155893]]  Left calibration\n",
+      "[[ 0.99919014  0.00279223 -0.0098278  -0.00769007]\n",
+      " [ 0.00725533  0.94493694  0.01535241  0.00239487]\n",
+      " [-0.00426917  0.02285426  0.97548028  0.00353978]\n",
+      " [-0.00216169 -0.00102199 -0.02790275  1.        ]]  Right calibration\n",
+      "nan  This is the retardance found from the left spot\n",
+      "0.4822239072003109  This is the retardance found from the right spot\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\EPL User\\Documents\\GitHub\\wcmelby-HWP_Characterizations\\SuperK_Select_Data\\JHK_Plate\\../../old\\DRRP_Functions.py:223: RuntimeWarning: invalid value encountered in arccos\n",
+      "  lretardance = np.arccos(Ml[3,3])/(2*np.pi)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 1.        ,  0.02086157, -0.00858559, -0.01985555],\n",
+       "        [-0.01396301,  0.67004043, -0.79127652, -0.03738838],\n",
+       "        [-0.00900717, -0.805175  , -0.67310227, -0.04873176],\n",
+       "        [ 0.01238518,  0.01642334,  0.03680831, -1.00650019]]),\n",
+       " array([[ 1.        , -0.00637315, -0.01837141, -0.01174428],\n",
+       "        [-0.00505385,  0.58531443, -0.75570891, -0.02340109],\n",
+       "        [-0.00625953, -0.73864071, -0.55841388, -0.03787882],\n",
+       "        [ 0.01103685,  0.00417999,  0.02002463, -0.9937691 ]]),\n",
+       " nan)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ultimate_polarimetry(Cal_theta1300, Cal_Il_1300, Cal_Ir_1300, theta1300, Il_1300, Ir_1300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.401279836028947"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arccos(-0.81371743)/(2*np.pi)"
    ]
   },
   {
@@ -573,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,12 +676,12 @@
     "lcenter = [198, 194]\n",
     "rcenter = [198, 391]\n",
     "maxradius = 65\n",
-    "cutoff = 1000000"
+    "cutoff = 10000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +705,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3111281.   8422066.  41707285.  62107435.  46618812.  15562524.\n",
+      "   446477.5  4653000.  16260463.  32277090.  55682507.  77704024.\n",
+      " 78475022.  58225878.5 36171947.  23338897.  13094441.   1843026.\n",
+      "  4195463.  28942917.  52649337.  45509093.  14527525.    650408.\n",
+      " 23431761.  54851494.  57340305.  30840894.   5202521.    907567.\n",
+      " 10113484.  23282658.  42773228.  67932524.5 80793879.  69649579.\n",
+      " 44981813.  28578585.  18748764.   7044266.    189132.  14454408.\n",
+      " 42786614.  53217771.  30541448.   3096166. ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cal_results['Cal_Il_1300'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,27 +753,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 7652498.  8512608. 24764951. 29197796. 17077313.  2748463.  2032598.\n",
-      "  8507033. 10568148. 12601641. 25684711. 46714274. 57995391. 50270884.\n",
-      " 31539092. 15574698.  4554435.   485684. 10409398. 32852654. 47054803.\n",
-      " 39093595. 15935381.  4701857. 15413191. 28912365. 25988530.  9078407.\n",
-      "   632968.  5577747. 10756204. 11096094. 17285274. 36069176. 55382730.\n",
-      " 56912739. 41269855. 23151466.  9426882.  1234089.  3323306. 20152349.\n",
-      " 41890561. 46201518. 28694584.  7825258.]\n",
-      "[50727342. 50286178. 33466059. 25924041. 39231764. 53544544. 56443597.\n",
-      " 47932996. 45551547. 45972764. 33033147. 11341729.   182468.  8241211.\n",
-      " 26233491. 42629561. 54472675. 58996561. 48165081. 24707677.  8299823.\n",
-      " 16666896. 40278363. 51018885. 39875490. 26461574. 32299912. 49292420.\n",
-      " 58609763. 53687977. 47699600. 47561755. 41082908. 21944975.  3499906.\n",
-      "  2052177. 16968696. 35353681. 49307980. 57442670. 55190365. 35581622.\n",
-      " 13843592.  9222845. 29006098. 51408824.]\n",
+      "[[ 0.00006588 -0.00000192 -0.0000169   0.00000815]\n",
+      " [-0.00008575  0.00012757  0.00004313  0.00000744]\n",
+      " [ 0.00000085 -0.00005992  0.00001135 -0.00001125]\n",
+      " [-0.9227681   0.19342777  1.         -0.34461997]] This is the Mueller matrix of the sample waveplate\n",
+      "nan This is the retardance of the sample\n",
+      "[[ 0.00003822 -0.00000475  0.00000152 -0.00000216]\n",
+      " [-0.00000427  0.00001962 -0.00000157 -0.00000649]\n",
+      " [ 0.00001007  0.0000124   0.00000455 -0.0000207 ]\n",
+      " [-0.43172796  1.          0.51210215 -0.07796919]] This is the Mueller matrix for calibration (close to identity)\n",
+      "0.5921639587364315 This is the RMS error in the calibration matrix\n",
+      "nan This is the retardance error in the sample waveplate\n",
+      "[ 0.55725107 -0.22784401  0.48875151  0.05820875  1.57074392] Fit parameters for a1, w1, w2, r1, and r2. 1 for generator, 2 for analyzer\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\EPL User\\Documents\\GitHub\\wcmelby-HWP_Characterizations\\SuperK_Select_Data\\JHK_Plate\\../../operational_scripts\\New_DRRP_Functions.py:295: RuntimeWarning: invalid value encountered in arccos\n",
+      "  retardance = np.arccos(np.trace(decompose_retarder(r_decomposed_MSample))/2 - 1)/(2*np.pi)\n",
+      "c:\\Users\\EPL User\\Documents\\GitHub\\wcmelby-HWP_Characterizations\\SuperK_Select_Data\\JHK_Plate\\../../operational_scripts\\New_DRRP_Functions.py:249: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  return 2*RMS/np.sqrt(4*x-x**2) # Value in radians\n"
+     ]
+    }
+   ],
+   "source": [
+    "data1300 = q_ultimate_polarimetry(cal_results['Cal_Il_1300'], cal_results['Cal_Ir_1300'], cal_results['Cal_theta1300'], sample_results['Il_1300'], sample_results['Ir_1300'], sample_results['theta1300'])\n",
+    "print(data1300[0], \"This is the Mueller matrix of the sample waveplate\")\n",
+    "print(data1300[1], \"This is the retardance of the sample\")\n",
+    "print(data1300[2], \"This is the Mueller matrix for calibration (close to identity)\")\n",
+    "print(data1300[3], \"This is the RMS error in the calibration matrix\")\n",
+    "print(data1300[4], \"This is the retardance error in the sample waveplate\")\n",
+    "print(data1300[5], \"Fit parameters for a1, w1, w2, r1, and r2. 1 for generator, 2 for analyzer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[0.         0.06981317 0.13962634 0.20943951 0.27925268 0.34906585\n",
       " 0.41887902 0.48869219 0.55850536 0.62831853 0.6981317  0.76794487\n",
       " 0.83775804 0.90757121 0.97738438 1.04719755 1.11701072 1.18682389\n",
@@ -672,9 +824,9 @@
    ],
    "source": [
     "# Example of accessing the data:\n",
-    "print(cal_results['Cal_Il_1400'])\n",
-    "print(cal_results['Cal_Ir_1400'])\n",
-    "print(cal_results['Cal_theta1400'])"
+    "print(sample_results['theta1300'])\n",
+    "# print(cal_results['Cal_Ir_1400'])\n",
+    "# print(cal_results['Cal_theta1400'])"
    ]
   },
   {
