calculated some matrices using I reduction

--- a/SuperK_Select_Data/JHK_Plate/JHK_SuperK_Analysis.ipynb
+++ b/SuperK_Select_Data/JHK_Plate/JHK_SuperK_Analysis.ipynb
@@ -22,16 +22,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sys.path.insert(0, '../../old')\n",
-    "from DRRP_Functions import ultimate_polarimetry"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -664,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +685,7 @@
     "    reduced_folder = f\"D:\\\\desktop_drrp_data\\\\test_12_17_2024\\\\calibration\\\\calibration_raw\\\\Cal_{wl}_Reduced\"\n",
     "    \n",
     "    # Extract the intensities using your function\n",
-    "    extracted_data = extract_intensities(reduced_filename, reduced_folder, lcenter, rcenter, maxradius, cutoff)\n",
+    "    extracted_data = extract_intensities(reduced_filename, reduced_folder, lcenter, rcenter, maxradius)\n",
     "    \n",
     "    # Store the data in the dictionary with keys that incorporate the wavelength\n",
     "    cal_results[f'Cal_Il_{wl}'] = extracted_data[0]\n",
@@ -729,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +733,7 @@
     "    reduced_folder = f\"D:\\\\desktop_drrp_data\\\\test_12_17_2024\\\\JHK_waveplate_measurement\\\\middle_position\\\\Cal_{wl}_Reduced\"\n",
     "    \n",
     "    # Extract the intensities using your function\n",
-    "    extracted_data = extract_intensities(reduced_filename, reduced_folder, lcenter, rcenter, maxradius, cutoff)\n",
+    "    extracted_data = extract_intensities(reduced_filename, reduced_folder, lcenter, rcenter, maxradius)\n",
     "    \n",
     "    # Store the data in the dictionary with keys that incorporate the wavelength\n",
     "    sample_results[f'Il_{wl}'] = extracted_data[0]\n",
@@ -753,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -778,9 +768,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\EPL User\\Documents\\GitHub\\wcmelby-HWP_Characterizations\\SuperK_Select_Data\\JHK_Plate\\../../operational_scripts\\New_DRRP_Functions.py:295: RuntimeWarning: invalid value encountered in arccos\n",
-      "  retardance = np.arccos(np.trace(decompose_retarder(r_decomposed_MSample))/2 - 1)/(2*np.pi)\n",
-      "c:\\Users\\EPL User\\Documents\\GitHub\\wcmelby-HWP_Characterizations\\SuperK_Select_Data\\JHK_Plate\\../../operational_scripts\\New_DRRP_Functions.py:249: RuntimeWarning: invalid value encountered in sqrt\n",
+      "c:\\Users\\EPL User\\Documents\\GitHub\\wcmelby-HWP_Characterizations\\SuperK_Select_Data\\JHK_Plate\\../../operational_scripts\\New_DRRP_Functions.py:834: RuntimeWarning: invalid value encountered in arccos\n",
+      "  retardance = np.arccos(np.trace(r_decomposed_MSample)/2 - 1)/(2*np.pi) # Value in waves\n",
+      "c:\\Users\\EPL User\\Documents\\GitHub\\wcmelby-HWP_Characterizations\\SuperK_Select_Data\\JHK_Plate\\../../operational_scripts\\New_DRRP_Functions.py:320: RuntimeWarning: invalid value encountered in sqrt\n",
       "  return 2*RMS/np.sqrt(4*x-x**2) # Value in radians\n"
      ]
     }
@@ -794,13 +784,6 @@
     "print(data1300[4], \"This is the retardance error in the sample waveplate\")\n",
     "print(data1300[5], \"Fit parameters for a1, w1, w2, r1, and r2. 1 for generator, 2 for analyzer\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -835,13 +818,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\EPL User\\Documents\\GitHub\\wcmelby-HWP_Characterizations\\SuperK_Select_Data\\JHK_Plate\\../../operational_scripts\\New_DRRP_Functions.py:295: RuntimeWarning: invalid value encountered in arccos\n",
-      "  retardance = np.arccos(np.trace(decompose_retarder(r_decomposed_MSample))/2 - 1)/(2*np.pi)\n",
-      "c:\\Users\\EPL User\\Documents\\GitHub\\wcmelby-HWP_Characterizations\\SuperK_Select_Data\\JHK_Plate\\../../operational_scripts\\New_DRRP_Functions.py:249: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  return 2*RMS/np.sqrt(4*x-x**2) # Value in radians\n"
+     "ename": "NameError",
+     "evalue": "name 'cal_results' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Loop over the wavelengths\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m wl \u001b[38;5;129;01min\u001b[39;00m wavelengths:\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;66;03m# Retrieve extracted data (ensure it has been stored in the `results` dictionary as discussed earlier)\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m     Cal_theta \u001b[38;5;241m=\u001b[39m \u001b[43mcal_results\u001b[49m\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCal_theta\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mwl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m, np\u001b[38;5;241m.\u001b[39marray([]))\n\u001b[0;32m      8\u001b[0m     Cal_Il \u001b[38;5;241m=\u001b[39m cal_results\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCal_Il_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mwl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m, np\u001b[38;5;241m.\u001b[39marray([]))\n\u001b[0;32m      9\u001b[0m     Cal_Ir \u001b[38;5;241m=\u001b[39m cal_results\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCal_Ir_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mwl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m, np\u001b[38;5;241m.\u001b[39marray([]))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'cal_results' is not defined"
      ]
     }
    ],
@@ -930,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,19 +959,142 @@
     "            data = q_ultimate_polarimetry(Cal_theta, Cal_Il, Cal_Ir, theta, Il, Ir)\n",
     "        else:\n",
     "            print(\"Invalid method specified. Please choose 'I' or 'q'.\")\n",
-    "            return\n",
+    "            return None\n",
     "\n",
     "        # Store the result for the current wavelength\n",
-    "        polarimetry_results[wl] = data"
+    "        polarimetry_results[wl] = data\n",
+    "\n",
+    "    return polarimetry_results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1300: (array([[ 0.85475689, -0.0013516 ,  0.00833876,  0.00350749],\n",
+       "         [-0.06910499,  0.88918282, -0.16929782, -0.0059165 ],\n",
+       "         [ 0.00633092, -0.18571904, -1.        , -0.0767172 ],\n",
+       "         [-0.00254817,  0.00579148,  0.08373687, -0.84894018]]),\n",
+       "  nan,\n",
+       "  array([[ 0.8302175 ,  0.00614754, -0.00009517,  0.00280281],\n",
+       "         [-0.06919833,  0.88852372, -0.00524209,  0.00029421],\n",
+       "         [ 0.00553362,  0.01252321,  1.        , -0.00229135],\n",
+       "         [ 0.00072554, -0.00042784,  0.00154791,  0.83049889]]),\n",
+       "  0.06848408877218055,\n",
+       "  nan,\n",
+       "  array([-0.02876755, -0.00827295, -0.14097039, -0.01634512, -0.02900232]))}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "multi_analysis(wavelengths, 'I')"
+    "multi_analysis([1300], 'q')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wavelength: 1600\n",
+      "[[ 0.81089928  0.01298716  0.00589815  0.00113352]\n",
+      " [-0.07557115  0.88117772 -0.03512578 -0.00193308]\n",
+      " [ 0.00459027 -0.05192173 -1.         -0.01988519]\n",
+      " [ 0.0049605  -0.01010077  0.01078293 -0.82245121]], Mueller matrix of the sample waveplate.\n",
+      "Retardance of the sample: nan\n",
+      "[[ 0.80652272  0.02730383  0.01560072 -0.00801281]\n",
+      " [-0.06623384  0.8775624  -0.00006548  0.00190595]\n",
+      " [ 0.01185905  0.00623263  1.         -0.0059767 ]\n",
+      " [-0.00698861  0.00765788  0.01045898  0.82190264]], Mueller matrix for calibration.\n",
+      "RMS error in the calibration matrix: 0.07500784135065686\n",
+      "Retardance error in the sample waveplate: nan\n",
+      "Fit parameters for a1, w1, w2, r1, and r2. 1 for generator, 2 for analyzer: [-0.01867945  0.00592028 -0.10873872 -0.06541317 -0.07364154]\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = multi_analysis([1600], 'q')\n",
+    "\n",
+    "# Check the results\n",
+    "if results:\n",
+    "    for wl, data in results.items():\n",
+    "        print(f\"Wavelength: {wl}\")\n",
+    "        print(f\"{data[0]}, Mueller matrix of the sample waveplate.\")\n",
+    "        print(f\"Retardance of the sample: {data[1]}\")\n",
+    "        print(f\"{data[2]}, Mueller matrix for calibration.\")\n",
+    "        print(f\"RMS error in the calibration matrix: {data[3]}\")\n",
+    "        print(f\"Retardance error in the sample waveplate: {data[4]}\")\n",
+    "        print(f\"Fit parameters for a1, w1, w2, r1, and r2. 1 for generator, 2 for analyzer: {data[5]}\")\n",
+    "else:\n",
+    "    print(\"No results to display.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wavelength: 1600\n",
+      "[[ 1.         -0.04792445  0.01446493  0.00717025]\n",
+      " [ 0.02001601  0.91167125  0.17426817  0.0067016 ]\n",
+      " [ 0.01001541  0.14607879 -0.97834481 -0.02123819]\n",
+      " [-0.00733198  0.00571235  0.023632   -0.99622426]], Mueller matrix of the sample (left).\n",
+      "[[ 0.99237859  0.01351152  0.02442784 -0.00728573]\n",
+      " [ 0.0320344   0.97512738  0.11315539  0.01264243]\n",
+      " [ 0.00450067  0.11512512 -0.95096929 -0.02040196]\n",
+      " [ 0.01580957 -0.03030514 -0.00164211 -1.        ]], Mueller matrix of the sample (right).\n",
+      "Retardance of the sample (left): 0.480170054220587\n",
+      "Retardance of the sample (right): 0.480170054220587\n",
+      "Retardance error (left): nan\n",
+      "Retardance error (right): 0.14054092333330515\n",
+      "[[ 0.96607362  0.01578059  0.01737476 -0.00665296]\n",
+      " [-0.0189059   1.          0.01937104  0.00825396]\n",
+      " [ 0.01982125 -0.0293576   0.96875715  0.00565295]\n",
+      " [-0.0081662   0.01297975 -0.01343236  0.97929281]], Mueller matrix of the calibration (left).\n",
+      "[[ 0.99526916  0.00874204  0.01968043 -0.00658892]\n",
+      " [ 0.01167165  0.97727783 -0.01197694 -0.00213927]\n",
+      " [-0.00724818  0.02299115  0.9631382  -0.01787785]\n",
+      " [-0.00648282  0.00038435  0.03533945  1.        ]], Mueller matrix of the calibration (left).\n",
+      "Fit parameters (left) for a1, a2, w1, w2, r1, and r2. 1 for generator, 2 for analyzer: [ 0.04132836  0.04655054  0.06292243 -0.06417321  0.02345928  0.04414537]\n",
+      "Fit parameters (right) for a1, a2, w1, w2, r1, and r2. 1 for generator, 2 for analyzer: [ 0.02604434  0.0524452   0.05106742 -0.06117061  0.06749805  0.02704231]\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = multi_analysis([1600], 'I')\n",
+    "\n",
+    "# Check the results\n",
+    "if results:\n",
+    "    for wl, data in results.items():\n",
+    "        print(f\"Wavelength: {wl}\")\n",
+    "        print(f\"{data[0]}, Mueller matrix of the sample (left).\")\n",
+    "        print(f\"{data[1]}, Mueller matrix of the sample (right).\")\n",
+    "        print(f\"Retardance of the sample (left): {data[2]}\")\n",
+    "        print(f\"Retardance of the sample (right): {data[3]}\")\n",
+    "        print(f\"Retardance error (left): {data[4]}\")\n",
+    "        print(f\"Retardance error (right): {data[5]}\")\n",
+    "        print(f\"{data[6]}, Mueller matrix of the calibration (left).\")\n",
+    "        print(f\"{data[7]}, Mueller matrix of the calibration (left).\")\n",
+    "        print(f\"Fit parameters (left) for a1, a2, w1, w2, r1, and r2. 1 for generator, 2 for analyzer: {data[8]}\")\n",
+    "        print(f\"Fit parameters (right) for a1, a2, w1, w2, r1, and r2. 1 for generator, 2 for analyzer: {data[9]}\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"No results to display.\")"
    ]
   },
   {
