worked on theoretical achromatic waveplate retardation

--- a/SuperK_Select_Data/L_Plate/L_SuperK_Analysis.ipynb
+++ b/SuperK_Select_Data/L_Plate/L_SuperK_Analysis.ipynb
@@ -466,12 +466,12 @@
     }
    ],
    "source": [
-    "reduced_filename = 'Reduced_DRRP_'\n",
+    "reduced_filename = 'Reduced_DRRP_' # First part of the file name that is the same for each reduced image\n",
     "reduced_folder = \"/home/shared/exoserver/Lab_Data/Mueller_Matrix_Polarimeter/L_Plate_Characterization/SuperK_Select_Data/Reduced_Data/Reduced_L_1200/\"\n",
-    "lcenter = [316, 248]\n",
+    "lcenter = [316, 248] # y,x pixel coordinates of the beam center on the detector\n",
     "rcenter = [316, 326]\n",
-    "maxradius = 15\n",
-    "cutoff = 90000\n",
+    "maxradius = 15 # radius of the beam in pixels\n",
+    "cutoff = 90000 # intensity threshold. If the pixel sum<cutoff, it will raise a warning and exclude that data\n",
     "\n",
     "extracted_data = extract_intensities(reduced_filename, reduced_folder, lcenter, rcenter, maxradius, cutoff)\n",
     "Il_1200 = extracted_data[0]\n",
