--- a/SuperK_Select_Data/JHK_Plate/JHK_SuperK_Analysis.ipynb
+++ b/SuperK_Select_Data/JHK_Plate/JHK_SuperK_Analysis.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-"execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Willi\\anaconda3\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.26.4\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import numpy as np\n",
@@ -131,31 +122,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calibration\n",
+    "# # Calibration\n",
     "\n",
-    "# Initialize a dictionary to store the results\n",
-    "cal_results = {}\n",
+    "# # Initialize a dictionary to store the results\n",
+    "# cal_results = {}\n",
     "\n",
-    "for wl in wavelengths:\n",
-    "    # Construct the folder path for the current wavelength\n",
-    "    reduced_folder = f\"D:\\\\desktop_drrp_data\\\\test_12_17_2024\\\\calibration\\\\calibration_raw\\\\Cal_{wl}_Reduced\"\n",
+    "# for wl in wavelengths:\n",
+    "#     # Construct the folder path for the current wavelength\n",
+    "#     reduced_folder = f\"D:\\\\desktop_drrp_data\\\\test_12_17_2024\\\\calibration\\\\calibration_raw\\\\Cal_{wl}_Reduced\"\n",
     "    \n",
-    "    # Extract the intensities using your function\n",
-    "    extracted_data = extract_intensities(reduced_filename, reduced_folder, lcenter, rcenter, maxradius)\n",
+    "#     # Extract the intensities using your function\n",
+    "#     extracted_data = extract_intensities(reduced_filename, reduced_folder, lcenter, rcenter, maxradius)\n",
     "    \n",
-    "    # Store the data in the dictionary with keys that incorporate the wavelength\n",
-    "    cal_results[f'Cal_Il_{wl}'] = extracted_data[0]\n",
-    "    cal_results[f'Cal_Ir_{wl}'] = extracted_data[1]\n",
-    "    cal_results[f'Cal_theta{wl}'] = extracted_data[2]"
+    "#     # Store the data in the dictionary with keys that incorporate the wavelength\n",
+    "#     cal_results[f'Cal_Il_{wl}'] = extracted_data[0]\n",
+    "#     cal_results[f'Cal_Ir_{wl}'] = extracted_data[1]\n",
+    "#     cal_results[f'Cal_theta{wl}'] = extracted_data[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,29 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OSError",
-     "evalue": "[Errno 28] No space left on device",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[26], line 24\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(output_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m jsonfile:\n\u001b[1;32m---> 24\u001b[0m     \u001b[43mjson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdump\u001b[49m\u001b[43m(\u001b[49m\u001b[43msample_results_serializable\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mjsonfile\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\EPL User\\.conda\\envs\\First_Light_SDK\\lib\\json\\__init__.py:180\u001b[0m, in \u001b[0;36mdump\u001b[1;34m(obj, fp, skipkeys, ensure_ascii, check_circular, allow_nan, cls, indent, separators, default, sort_keys, **kw)\u001b[0m\n\u001b[0;32m    179\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m chunk \u001b[38;5;129;01min\u001b[39;00m iterable:\n\u001b[1;32m--> 180\u001b[0m     \u001b[43mfp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchunk\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mOSError\u001b[0m: [Errno 28] No space left on device",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[1;31mOSError\u001b[0m: [Errno 28] No space left on device",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[26], line 23\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m# Save cal_results to a JSON file on the D drive\u001b[39;00m\n\u001b[0;32m     22\u001b[0m output_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./sample_results.json\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m---> 23\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(output_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m jsonfile:\n\u001b[0;32m     24\u001b[0m     json\u001b[38;5;241m.\u001b[39mdump(sample_results_serializable, jsonfile)\n",
-      "\u001b[1;31mOSError\u001b[0m: [Errno 28] No space left on device"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# data with waveplate sample, central position\n",
     "\n",
@@ -272,7 +243,15 @@
     "    # Store the data in the dictionary with keys that incorporate the wavelength\n",
     "    sample_results_x5_y5[f'Il_{wl}'] = extracted_data[0]\n",
     "    sample_results_x5_y5[f'Ir_{wl}'] = extracted_data[1]\n",
-    "    sample_results_x5_y5[f'theta{wl}'] = extracted_data[2]"
+    "    sample_results_x5_y5[f'theta{wl}'] = extracted_data[2]\n",
+    "\n",
+    "# Convert NumPy arrays to lists before saving to a JSON file\n",
+    "sample_results_serializable = {key: convert_to_serializable(value) for key, value in sample_results_x5_y5.items()}\n",
+    "\n",
+    "# Save cal_results to a JSON file on the D drive\n",
+    "output_path = './sample_results_x5_y5.json'\n",
+    "with open(output_path, 'w') as jsonfile:\n",
+    "    json.dump(sample_results_serializable, jsonfile)"
    ]
   },
   {
@@ -1456,7 +1435,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "First_Light_SDK",
    "language": "python",
    "name": "python3"
   },
@@ -1470,7 +1449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
